--- a/style.css
+++ b/style.css
@@ -5,3 +5,19 @@ html, body {
 canvas {
   display: block;
 }
+
+button {
+  background-color: rgba(200, 40, 180); 
+  border: none;
+  color: white;
+  padding: 55px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+button:hover{
+  background-color: rgb(50, 40, 200);
+/*  padding: 100px;*/ makes it bigger if added on
+}
